<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project repository is downloaded</string>
    <string name="notification_button">Open Detail</string>
    <string name="notification_channel_id" translatable="false">load_app_channel</string>
    <string name="notification_info" >Download is ready</string>
    <string name="notification_info_not_ready" >Download is not ready</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="loadApp">LoadApp - Current repository by Udacity</string>
    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="download_image">Download Image</string>
    <string name="download_no_option_toast">Please select an option!</string>

    <string name="status">Status:</string>
    <string name="statusSuccess">SUCCESS</string>
    <string name="statusFailed">Failed</string>
    <string name="file_name">File Name:</string>
    <string name="download">Download</string>
    <string name="channel_name">Load App</string>

    <string name="repoNameGlide">Glide</string>
    <string name="repoNameUdacity">Udacity</string>
    <string name="repoNameRetrofit">Retrofit</string>

    <string name="load_button_state_loading">we are loading...</string>
    <string name="load_button_text">Download</string>
    <string name="load_button_toast_no_download">Please select one option</string>
    <string name="detail_description_image_suomi">image suomi finnland</string>
    <string name="detail_header_title">File Details</string>
    <string name="detail_file_name_label">Name</string>
    <string name="detail_state_label">State</string>
    <string name="detail_close_button">Close</string>

</resources>
