<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="6dp"
    android:contentDescription="@string/detail_description_image_suomi"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/header_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/detail_description_image_suomi"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/content_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swiss" />

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/detail_file_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="16dp"
            android:text="@string/detail_file_name_label" />

        <TextView
            android:id="@+id/detail_file_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="16dp" />

        <TextView
            android:id="@+id/detail_state_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="16dp"
            android:text="@string/detail_state_label" />

        <TextView
            android:id="@+id/detail_state_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="16dp" />

        <Button
            android:id="@+id/detail_close_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:padding="16dp"
            android:text="@string/detail_close_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/detail_title_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/header_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="32dp"
            android:text="@string/detail_header_title"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp" />
    </LinearLayout>
</androidx.constraintlayout.motion.widget.MotionLayout>